--- a/estilos/style.css
+++ b/estilos/style.css
@@ -1,5 +1,20 @@
 @charset "UTF-8";
 
+:root {
+  --azul-principal: #000080;
+  --azul-hover: #000066;
+  --azul-transparente: #00009486;
+  --cinza-fundo: rgb(216, 216, 216);
+  --cinza-claro: rgb(241, 241, 241);
+  --cinza-borda: rgb(192, 192, 192);
+  --cinza-escuro: #bdbdbdc5;
+  --cinza-hr: #ccc;
+  --texto-padrao: #111;
+  --texto-secundario: rgb(230, 230, 230);
+  --texto-terciario: rgb(43, 43, 43);
+  --texto-comentario: rgb(19, 19, 19);
+}
+
 @import url('https://fonts.googleapis.com/css2?family=Noto+Serif:ital,wght@0,100..900;1,100..900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Funnel+Sans:ital,wght@0,300..800;1,300..800&display=swap');
 
@@ -11,8 +26,13 @@
 }
 
 body, html {
-  background-color: rgb(216, 216, 216);
-  font-family: "Funnel Sans", sans-serif;
+  background-color: var(--cinza-fundo);
+  font-family: "Funnel Sans", arial;
+}
+
+::selection {
+  background-color: var(--azul-principal);
+  color: white;
 }
 
 a {
@@ -20,13 +40,14 @@ a {
 }
 
 header {
-  background-color: #000080  ;
-  color: rgb(230, 230, 230);
+  font-family: "Funnel Sans", arial;
+  background-color: var(--azul-principal);
+  color: var(--texto-secundario);
   position: sticky;
   top: 0;
   left: 0;
   width: 100%;
-  height: 125px;
+  height: 135px;
   z-index: 1000;
   display: flex;
   flex-direction: column;
@@ -34,12 +55,10 @@ header {
   padding-top: 15px;
 }
 
-
 header h1 a {
   color: white;
   text-shadow: 0px 2px 4px rgba(0, 0, 0, 0.37);
   font-size: 40px;
-  font-weight: bolder;
   text-align: center;
   align-items: center;
   text-decoration: none;
@@ -66,7 +85,7 @@ menu li {
 }
 
 menu li:hover {
-  background-color: #00009486;
+  background-color: var(--azul-transparente);
   transition: 0.2s;
 }
 
@@ -77,7 +96,7 @@ menu li a {
   text-align: center;
   gap: 5px;
   font-size: 16px;
-  color: rgb(230, 230, 230);
+  color: var(--texto-secundario);
   text-decoration: none;
 }
 
@@ -89,36 +108,34 @@ menu li a {
 }
 
 main {
-  background-color: rgb(216, 216, 216);
+  background-color: var(--cinza-fundo);
   min-height: 300px;
   padding: 10px;
 }
 
 article {
-  background-color: rgb(241, 241, 241);
-  border: 1px solid rgb(192, 192, 192);
+  background-color: var(--cinza-claro);
+  border: 1px solid var(--cinza-borda);
   width: 100%;
 }
 
 article p {
   font-size: 17px;
   line-height: 1.7;
-  color: #111;
-
+  color: var(--texto-padrao);
   margin-left: 15px;
   margin-bottom: 15px;
 }
 
 .autor-data {
   font-size: 15px;
-
   line-height: 12px;
   text-align: left;
   margin-left: 50px;
 }
 
 .autor-data strong {
-  color: #000080;
+  color: var(--azul-principal);
 }
 
 article img {
@@ -136,7 +153,7 @@ article img {
 .noticia-principal-1,
 .noticia-principal-2 {
   background-color: white;
-  border: 1px solid rgb(192, 192, 192);
+  border: 1px solid var(--cinza-borda);
   border-radius: 1.5px;
   padding: 10px;
   margin: 5px;
@@ -150,10 +167,10 @@ article img {
 .noticia-principal-1 a,
 .noticia-principal-2 a {
   font-size: 24px;
-  color: #000080;
+  color: var(--azul-principal);
   text-decoration: none;
   margin-bottom: 1px;
-  margin-top: 90px;
+  margin-top: 5px;
 }
 
 .noticia-principal-1 li,
@@ -170,19 +187,18 @@ article img {
 }
 
 .categoria {
-  color: rgb(43, 43, 43);
+  color: var(--texto-terciario);
   font-style: normal;
   padding: 0px;
-  margin-left: 1px;
+  margin-left: 8px;
   top: -5px;
   bottom: -5px;
 }
 
 .titulo {
-  color: #000080;
+  color: var(--azul-principal);
   font-size: 35px;
-  margin: 10px 15px 10px 10px;
-  margin-top: 1px;
+  margin: -9px 15px -2px 10px;
 }
 
 .noticia-container .titulo {
@@ -206,9 +222,8 @@ article img {
 
 .em-alta {
   background-color: white;
-  border: 1px solid rgb(192, 192, 192);
+  border: 1px solid var(--cinza-borda);
   border-radius: 1.5px;
-
   padding: 10px;
   margin: 5px;
   width: 99.1%;
@@ -227,17 +242,16 @@ article img {
 }
 
 .em-alta .titulo a {
-  color: #000080;
+  color: var(--azul-principal);
   text-decoration: none !important;
 }
 
 .noticia-imagem {
-  background-color: #bdbdbdc5;
+  background-color: var(--cinza-escuro);
   background-image: url(../media/conto-para-guto.jpeg);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
-  
   display: block;
   width: 50%;
   height: 600px;
@@ -245,7 +259,6 @@ article img {
   padding: 10px;
   margin: 5px auto;
 }
-
 
 .noticia-imagem .titulo,
 .noticia-imagem .subititulo {
@@ -259,18 +272,18 @@ article img {
 }
 
 hr {
-    height: 1px;
-    width: 99.8%;
-    background-color: #ccc;
-    border: none;
-    margin-top: 5px;
-    align-items: center;
+  height: 1px;
+  width: 99.8%;
+  background-color: var(--cinza-hr);
+  border: none;
+  margin-top: 5px;
+  align-items: center;
 }
 
 .comentarios hr {
   height: 1px;
   width: 80%;
-  background-color: #ccc;
+  background-color: var(--cinza-hr);
   border: none;
   margin-top: 5px;
   margin: 5px auto; 
@@ -287,14 +300,14 @@ hr {
 }
 
 .comentarios p {
-  color: rgb(19, 19, 19);
+  color: var(--texto-comentario);
   font-size: 13.5px;
   font-weight: lighter;
   text-align: left;
 }
 
 .comentarios a {
-  color: #000080;
+  color: var(--azul-principal);
   text-decoration: underline;
 }
 
@@ -306,7 +319,7 @@ hr {
 }
 
 textarea {
-  border: 1px solid rgb(192, 192, 192);
+  border: 1px solid var(--cinza-borda);
   font-family: "Funnel Sans";
   width: 300px;
   height: 100px;
@@ -321,7 +334,7 @@ textarea {
 button {
   font-family: "Funnel Sans";
   padding: 10px;
-  background-color: #000080;
+  background-color: var(--azul-principal);
   color: white;
   border: none;
   cursor: pointer;
@@ -332,7 +345,7 @@ button {
 }
 
 button:hover {
-  background-color: #000066;
+  background-color: var(--azul-hover);
 }
 
 .comentario p {
@@ -356,8 +369,9 @@ button:hover {
 
 .login h1 {
   font-size: 28px;
-  color: #000080;
+  color: var(--azul-principal);
   margin-bottom: 10px;
+  margin-top: -55px;
 }
 
 .login p {
@@ -375,14 +389,14 @@ button:hover {
 .campo input {
   padding: 12px;
   font-size: 16px;
-  border: 1px solid #c0c0c0;
+  border: 1px solid var(--cinza-borda);
   border-radius: 6px;
   outline: none;
   transition: 0.2s;
 }
 
 .campo input:focus {
-  border-color: #000080;
+  border-color: var(--azul-principal);
   box-shadow: 0 0 5px rgba(0, 0, 128, 0.2);
 }
 
@@ -399,7 +413,7 @@ label .material-icons {
 }
 
 input[type="submit"] {
-  background-color: #000080;
+  background-color: var(--azul-principal);
   color: white;
   border: none;
   padding: 10px;
@@ -413,19 +427,19 @@ input[type="submit"] {
 }
 
 input[type="submit"]:hover {
-  background-color: #000066;
+  background-color: var(--azul-hover);
 }
 
 .login p a {
   display: inline-block;
   margin-top: 10px;
   font-size: 15px;
-  color: #000080;
+  color: var(--azul-principal);
 }
 
 footer {
-  background-color: #000080;
-  color: rgb(230, 230, 230);
+  background-color: var(--azul-principal);
+  color: var(--texto-secundario);
   width: 100%;
   height: auto;
   display: flex;
