--- a/estilos/style.css
+++ b/estilos/style.css
@@ -13,6 +13,7 @@
   --texto-secundario: rgb(230, 230, 230);
   --texto-terciario: rgb(43, 43, 43);
   --texto-comentario: rgb(19, 19, 19);
+  --borda: rgb(0, 0, 0);
 }
 
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
@@ -22,12 +23,11 @@
   padding: 0;
   box-sizing: border-box;
   text-align: left;
-  font-family: "Roboto", sans-serif;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 body, html {
   background-color: var(--cinza-fundo);
-  font-family: "Roboto", sans-serif;
 }
 
 ::selection {
@@ -40,7 +40,6 @@ a {
 }
 
 header {
-  font-family: "Roboto", sans-serif;
   background-color: var(--azul-principal);
   color: var(--texto-secundario);
   position: sticky;
@@ -56,7 +55,7 @@ header {
 }
 
 header h1 a {
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   color: white;
   text-shadow: 0px 2px 4px rgba(0, 0, 0, 0.37);
   font-size: 40px;
@@ -119,37 +118,60 @@ article {
   background-color: var(--cinza-claro);
   border: 1px solid var(--cinza-borda);
   width: 100%;
+  text-align: left;
 }
 
 article h1 {
   font-size: 30px;
-  margin: 10px 5px 5px 15px;
+  margin: 5px 5px 5px 15px;
 }
 
 article p {
   font-size: 17px;
   line-height: 25px;
   color: var(--texto-padrao);
-  margin-left: 15px;
-  margin-bottom: 15px;
-}
-
-article ul {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 10px;
-  padding: 10px;
-  list-style: none;
-  text-align: center;
+  margin: -2px 5px 15px 5px;
 }
 
 article li {
+  list-style-type: disc;
   font-size: 17px;
-  line-height: 1.7;
   color: var(--texto-padrao);
-  margin-left: 15px;
-  margin-bottom: 15px;
+  margin-left: 320px;
+  margin-bottom: 5px;
+  top: -5px;
+}
+
+table {
+  background-color: white;
+  border-collapse: collapse;
+  align-items: flex-start;
+  margin-left: 300px;
+  width: 50%;
+  font-size: 16px;
+}
+
+th {
+  background-color: var(--azul-principal);
+  color: white;
+  border: 0.5px solid #000000;
+  padding: 5px;
+  text-align: center;
+} 
+
+td{
+  border: 0.5px solid var(--texto-padrao);
+  padding: 5px;
+  color: rgb(0, 0, 0);
+}
+
+tr:hover {
+  background-color: #f5f5f5;
+  transition: background-color 0.4s
+}
+
+tr:nth-child(even) {
+    background-color: rgba(243, 243, 243, 0.904);
 }
 
 .autor-data {
@@ -171,11 +193,12 @@ article li {
 .compartilhar i {
   text-align: left;
   margin-left: 15px;
+  margin-top: 5px;
   font-size: 20px;
   color: var(--azul-principal);
   cursor: pointer;
   transition: 0.3s;
-  margin-bottom: -15px;
+  margin-bottom: -20px;
 }
 
 .compartilhar i:hover {
@@ -224,8 +247,8 @@ article img {
   padding-left: 5px;
 }
 
-.noticia-container-2 .subititulo,
-.noticia-container .subititulo {
+.noticia-container-1 .subititulo,
+.noticia-container-2 .subititulo {
   font-size: 14px;
   color: black;
   margin-left: 5px;
@@ -237,7 +260,7 @@ article img {
   padding: 0px;
   margin-left: 8px;
   top: -5px;
-  bottom: -5px;
+  bottom: 20px;
 }
 
 .titulo {
@@ -252,7 +275,7 @@ article img {
 }
 
 .em-alta h1 {
-  font-weight: lighter;
+  font-weight: normal;
   text-align: left;
   margin-left: 2px;
   width: 100%;
@@ -275,7 +298,7 @@ article img {
   font-size: 22px;
   font-weight: bold;
   margin: 10px;
-  line-height: 0.9
+  line-height: 19.5px;
 
 }
 
@@ -340,7 +363,7 @@ hr {
 .comentarios p {
   color: var(--texto-comentario);
   font-size: 13.5px;
-  font-weight: lighter;
+  font-weight: normal;
   text-align: left;
 }
 
